force-app/main/default/objects/Migration_Object__c/Migration_Object__c.object-meta.xml
<CustomObject>
    <label>Migration Object</label>
    <nameField>
        <label>Migration Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>