force-app/main/default/objects/Migration_Object__c/fields/CSV_Header_Override_Map__c.field-meta.xml
<CustomField>
    <fullName>CSV_Header_Override_Map__c</fullName>
    <label>CSV Header Override Map</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>