force-app/main/default/objects/Migration_Object__c/fields/Destination_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_External_Id__c</fullName>
    <label>Destination External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>