force-app/main/default/objects/Migration_Object__c/fields/Failed_Record__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record__c</fullName>
    <label>Failed Record</label>
    <summarizedField>Migration_File__c.Failed_Record__c</summarizedField>
    <summaryForeignKey>Migration_File__c.Migration_Object__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>