force-app/main/default/objects/Migration_Object__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <inlineHelpText>Enter Fields that you want to migrate</inlineHelpText>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>