force-app/main/default/objects/Migration_Object__c/fields/Limit_Records__c.field-meta.xml
<CustomField>
    <fullName>Limit_Records__c</fullName>
    <label>Limit Records</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>