force-app/main/default/objects/Migration_Object__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DestinationOrg</fullName>
                <label>B2B</label>
            </value>
            <value>
                <fullName>Imperial_Dade_SIT1</fullName>
            </value>
            <value>
                <fullName>B2B_ID_UAT</fullName>
                <label>B2B ID UAT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>