force-app/main/default/objects/Migration_Object__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>