force-app/main/default/objects/Migration_Object__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>insert</fullName>
            </value>
            <value>
                <fullName>upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>