force-app/main/default/objects/Migration_Object__c/fields/Relationship_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Mapping__c</fullName>
    <label>Relationship Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>