force-app/main/default/objects/Migration_Object__c/fields/Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Status_Field__c</fullName>
    <label>Status Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>