force-app/main/default/objects/Migration_Object__c/fields/Successful_Record__c.field-meta.xml
<CustomField>
    <fullName>Successful_Record__c</fullName>
    <label>Successful Record</label>
    <summarizedField>Migration_File__c.Successful_Record__c</summarizedField>
    <summaryForeignKey>Migration_File__c.Migration_Object__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>