force-app/main/default/objects/Migration_Object__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <label>Total Records</label>
    <summarizedField>Migration_File__c.Total_Records__c</summarizedField>
    <summaryForeignKey>Migration_File__c.Migration_Object__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>