force-app/main/default/objects/Migration_Object__c/fields/Values_Map__c.field-meta.xml
<CustomField>
    <fullName>Values_Map__c</fullName>
    <label>Values Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>