force-app/main/default/objects/Migration_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>Named_Credential__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Records__c</columns>
    <columns>Successful_Record__c</columns>
    <columns>Failed_Record__c</columns>
    <columns>Active__c</columns>
    <columns>CSV_Header_Override_Map__c</columns>
    <columns>Relationship_Mapping__c</columns>
    <columns>Values_Map__c</columns>
    <columns>Destination_External_Id__c</columns>
    <columns>Where_Clause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>